[package]
name = "mosapic"
version = "0.1.0"
authors = ["Pierre Rolland <roll.pierre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.34.0"
image = "0.23.14"
indicatif = "0.16.2"
lab = "0.11.0"
